# doc-worker

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  main.py  paddleocr_helpers.py  pyproject.toml  requirements.txt  server.py  test_paddleocr_models.py  worker.py
.github/workflows/: ci.yml  docker.yaml
server/: __init__.py  adapters.py  api.py  companion.py  models.py  orchestrator.py  security.py
server/stages/: lifecycle.py  ocr.py  output.py  validate.py
tests/: conftest.py  test_api.py  test_companion.py  test_models.py  test_orchestrator.py  test_stages.py
